--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,7 +49,6 @@ jobs:
           - integration-charm
           - integration-password
           - integration-redis-relation
-          - integration-scaling
     name: ${{ matrix.tox-environments }}
     needs:
       - lint
@@ -89,7 +88,7 @@ jobs:
           CI_PACKED_CHARMS: ${{ needs.build.outputs.charms }}
 
   integration-test-relation-single-unit:
-    name: Integration tests (relation, num_units=1)
+    name: integration-relation (relation, num_units=1)
     needs:
       - lint
       - unit-test
@@ -124,5 +123,44 @@ jobs:
           fi
       - name: Run integration tests
         run: tox run -e integration-relation -- --num-units 1 -m '${{ steps.select-tests.outputs.mark_expression }}'
+        env:
+          CI_PACKED_CHARMS: ${{ needs.build.outputs.charms }}
+
+integration-test-scaling:
+    name: integration-scaling
+    needs:
+      - lint
+      - unit-test
+      - build
+    runs-on: ubuntu-latest
+    timeout-minutes: 120
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup operator environment
+        # TODO: Replace with custom image on self-hosted runner
+        uses: charmed-kubernetes/actions-operator@main
+        with:
+          provider: microk8s
+          channel: "1.28-strict/stable"
+          juju-channel: 2.9/stable
+          bootstrap-options: "--agent-version 2.9.29"
+      - name: Download packed charm(s)
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ needs.build.outputs.artifact-name }}
+      - name: Select tests
+        id: select-tests
+        run: |
+          if [ "${{ github.event_name }}" == "schedule" ]
+          then
+            echo Running unstable and stable tests
+            echo "mark_expression=" >> $GITHUB_OUTPUT
+          else
+            echo Skipping unstable tests
+            echo "mark_expression=not unstable" >> $GITHUB_OUTPUT
+          fi
+      - name: Run integration tests
+        run: tox run -e integration-scaling -- -m '${{ steps.select-tests.outputs.mark_expression }}'
         env:
           CI_PACKED_CHARMS: ${{ needs.build.outputs.charms }}
