--- a/tox.ini
+++ b/tox.ini
@@ -39,11 +39,11 @@ commands =
 description = Check code against coding style standards
 deps =
     black
-    flake8==4.0.1
+    flake8
     flake8-docstrings
     flake8-copyright
     flake8-builtins
-    pyproject-flake8
+    pyproject-flake8>=7.0.0
     pep8-naming
     isort
     codespell
