--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,7 +48,9 @@ jobs:
         tox-environments:
           - integration-charm
           - integration-password
-          - integration-redis-relation
+          # Skipping until issues in `discourse-k8s-operator` are resolved. Issue:
+          # "https://github.com/canonical/discourse-k8s-operator/issues/268"
+          # - integration-redis-relation
     name: ${{ matrix.tox-environments }}
     needs:
       - lint
