--- a/metadata.yaml
+++ b/metadata.yaml
@@ -12,20 +12,12 @@ tags:
   - kubernetes
   - redis
 summary: >
-  Redis is an open source (BSD licensed), in-memory data structure store, used
-  as a database, cache, and message broker. Redis provides data structures
-  such as strings, hashes, lists, sets, sorted sets with range queries,
-  bitmaps, hyperloglogs, geospatial indexes, and streams. Redis has built-in
-  replication, Lua scripting, LRU eviction, transactions, and different levels
-  of on-disk persistence, and provides high availability via Redis Sentinel and
-  automatic partitioning with Redis Cluster.
-
-  This charm supports Redis in Kubernetes environments, using k8s services
-  for load balancing. This supports a simple Redis topology. Although multiple
-  units are allowed, replication and clustering are not supported for the moment.
+  This charm supports Redis in Kubernetes environments, using k8s services for load
+  balancing. This supports a simple Redis topology, but replication and clustering
+  are not supported for the moment.
 maintainers:
-  - Eduardo Mucelli R. Oliveira <eduardo.mucelli@canonical.com>
-  - Raul Zamora Martinez <raul.zamora@canonical.com>
+  - Rene Radoi <rene.radoi@canonical.com>
+  - Smail Kourta <smail.kourta@canonical.com>
 
 provides:
   redis:
