pin websockets to <14.0 because of breaking changes in this version (see also: https://github.com/juju/python-libjuju/issues/1184)

--- a/tox.ini
+++ b/tox.ini
@@ -77,6 +77,9 @@ deps =
     pytest-operator
     pytest-order
     lightkube==0.13.0
+    # pin websockets to <14.0 because of breaking changes in this version
+    # see also: https://github.com/juju/python-libjuju/issues/1184
+    websockets<14.0
     -r {tox_root}/requirements.txt
 commands =
     pytest -vv --tb native --log-cli-level=INFO {[vars]tests_path}/integration/{env:TEST_FILE} -s {posargs}
