run CI integration tests on self-hosted runners

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,7 +54,7 @@ jobs:
       - lint
       - unit-test
       - build
-    runs-on: ubuntu-22.04
+    runs-on: [self-hosted, linux, X64, jammy, large]
     timeout-minutes: 120
     steps:
       - name: Checkout
@@ -93,7 +93,7 @@ jobs:
       - lint
       - unit-test
       - build
-    runs-on: ubuntu-22.04
+    runs-on: [self-hosted, linux, X64, jammy, large]
     timeout-minutes: 120
     steps:
       - name: Checkout
@@ -132,7 +132,7 @@ jobs:
       - lint
       - unit-test
       - build
-    runs-on: ubuntu-22.04
+    runs-on: [self-hosted, linux, X64, jammy, large]
     timeout-minutes: 120
     steps:
       - name: Checkout
